Mejora de codigo